--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "crypto": "^1.0.1",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
-    "firebase-admin": "^13.1.0",
+    "firebase-admin": "^13.2.0",
     "fs": "^0.0.1-security",
-    "multer": "^1.4.5-lts.1"
+    "google-gax": "^4.4.1",
+    "multer": "^1.4.5-lts.1",
+    "node-fetch": "^3.3.2"
   }
 }
